# QRcode

./: main.py  pyproject.toml  qr_codes_landscape_a4.docx  qrcode.ipynb
conf/: config.yaml
outputs/2026-01-20/22-35-44/.hydra/: hydra.yaml
outputs/2026-02-08/13-32-10/.hydra/: hydra.yaml
outputs/2026-02-08/13-34-10/.hydra/: hydra.yaml
outputs/2026-02-08/13-35-59/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-08/13-36-42/.hydra/: hydra.yaml
